--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@metaplex-foundation/mpl-token-metadata": "1.2.3",
     "@metaplex/js": "4.12.0",
     "@project-serum/anchor": "0.22.1",
+    "@raydium-io/raydium-sdk": "1.1.0-beta.1",
     "@solana/web3.js": "1.31.0"
   },
   "devDependencies": {
