--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@frakters/frakt-sdk",
-  "version": "0.0.2",
+  "name": "@frakt-protocol/frakt-sdk",
+  "version": "0.0.3",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
     "Frakt",
