--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frakt-protocol/frakt-sdk",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
     "Frakt",
@@ -16,13 +16,14 @@
     "build": "tsc",
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "docs": "typedoc src/index.ts"
+    "docs": "typedoc src/index.ts",
+    "publish": "npm run build && npm publish"
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "1.2.3",
     "@metaplex/js": "4.12.0",
     "@project-serum/anchor": "0.22.1",
-    "@raydium-io/raydium-sdk": "1.0.1-beta.46",
+    "@raydium-io/raydium-sdk": "1.0.1-beta.31",
     "@solana/web3.js": "1.34.0",
     "bn.js": "5.2.0",
     "lodash": "^4.17.21"
