--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "docs": "typedoc src/index.ts",
-    "update": "npm version minor && npm run build && npm run docs && npm publish",
-    "prepatch": "npm version prepatch && npm run build && npm publish"
+    "prepublish": "npm run build && npm run docs",
+    "minor": "npm version minor && npm run prepublish && npm publish",
+    "patch": "npm version patch && npm run prepublish && npm publish"
   },
   "dependencies": {
     "@project-serum/anchor": "0.24.2",
