--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@project-serum/anchor": "0.24.2"
+    "@project-serum/anchor": "0.24.2",
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
