--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@frakt-protocol/frakt-sdk",
   "version": "0.8.23",
+  "license": "MIT",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
     "Frakt",
