--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frakt-protocol/frakt-sdk",
-  "version": "0.8.26",
+  "version": "0.8.27-beta.1",
   "license": "MIT",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
@@ -24,7 +24,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^2.10.0",
     "@project-serum/anchor": "0.26.0",
     "axios": "^1.2.1"
   },
