--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frakt-protocol/frakt-sdk",
-  "version": "0.8.27",
+  "version": "0.8.27-beta.2",
   "license": "MIT",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
@@ -26,7 +26,8 @@
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^2.10.0",
     "@project-serum/anchor": "0.26.0",
-    "axios": "^1.3.6"
+    "axios": "^1.3.6",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
