--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@frakt-protocol/frakt-sdk",
-  "version": "0.8.29",
+  "version": "0.8.34",
   "license": "MIT",
   "description": "Frakt SDK for interacting with frakt.xyz protocols",
   "keywords": [
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^2.10.0",
-    "@project-serum/anchor": "0.26.0",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/web3.js": "^1.87.6",
     "axios": "^1.3.6"
   },
   "devDependencies": {
